--- a/workspace/ERPlab/src/main/resources/static/css/footer.css
+++ b/workspace/ERPlab/src/main/resources/static/css/footer.css
@@ -6,6 +6,7 @@ body {
     height: 300px;
     padding: 0px 50px;
     border-top: 2px solid black;
+    margin-top: 300px;
 }
 .footer > .footer_box {
     height: 100%;
