a1 company and event launch
a1 company and event launch

--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/c_event.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/c_event.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -148,6 +148,6 @@
         <script src="assets/js/breakpoints.min.js"></script>
         <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
-        <script src="/src/main/resources/static/js/a/a_company.js"></script>
+        <script src="/js/c/c_event.js"></script>
     </body>
 </html>
