--- a/workspace2/ERPlab/src/main/resources/static/css/common.css
+++ b/workspace2/ERPlab/src/main/resources/static/css/common.css
@@ -358,7 +358,9 @@ template {
 /* ================================================================================================================ */
 
 
-
+* { 
+	font-family: 'Noto Sans KR', sans-serif;
+}
 
 
 
