company function added

--- a/workspace2/ERPlab/src/main/resources/static/css/common.css
+++ b/workspace2/ERPlab/src/main/resources/static/css/common.css
@@ -9,7 +9,7 @@
  */
  
 @font-face {
-	font-family: 'NotoSans';
+	font-family: 'NotoSans' !important;
 	src: url('../fonts/NotoSansKR-Medium.otf') format('truetype');
 }
 
